made google adds into a component so i can put ads anywhere on any page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,17 +14,13 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <title>F I T N E S S </title>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-6197894649862198",
-    enable_page_level_ads: true
-  });
-</script>
+    <!-- Google Ads -->
+   
+
   </head>
   <body>
     <div id="root"></div>
-    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </body>
   
   <script src="assets/jquery/jquery.min.js"></script>
